objects/SFDC_Feature__mdt.object
<CustomObject>
    <description>Industry key components and features for transitioning to</description>
    <fields>
        <fullName>Assessment_Result_Fields__c</fullName>
        <inlineHelpText>Comma separated list of Assessment__c field API names. When any of the listed fields has a value populated it will trigger assignment of the Priority set on this configuration</inlineHelpText>
        <label>Assessment Result Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conflicting_Custom_Objects__c</fullName>
        <inlineHelpText>Comma separated list of custom object API names that might conflict with this SFDC feature</inlineHelpText>
        <label>Conflicting Custom Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Label__c</fullName>
        <inlineHelpText>Developer name of custom label for name for this feature</inlineHelpText>
        <label>Custom Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_URL__c</fullName>
        <label>Documentation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Assigned priority when a corresponding Assessment result is evaluated for this feature to apply</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Label__c</fullName>
        <inlineHelpText>Name of Custom Label with description text for reason to use this feature with the assigned priority</inlineHelpText>
        <label>Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SFDC Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Custom_Label__c</columns>
        <columns>Priority__c</columns>
        <columns>Reason_Label__c</columns>
        <columns>Assessment_Result_Fields__c</columns>
        <columns>Conflicting_Custom_Objects__c</columns>
        <columns>Documentation_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Features</pluralLabel>
</CustomObject>